--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^4.1.1",
+    "recharts": "^2.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
