--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^4.1.1",
     "recharts": "^2.6.2",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
