--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-simple-star-rating": "^4.1.1",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
